tests/errors/binding/comp.fil
comp main<'G:1>() -> () {
    A := new Add;
}